Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
Revision 72869
-
October 2016
Description
When I run the latest Pale Moon (Atom Build), it crashes when loading the start page. The debug log generated while running it is attached. You can get it by clicking on http://relmirror2.palemoon.org/release/palemoon-26.5.0.Atom.WinXP.installer.exe.
Attachments
Issue Links
- is duplicated by
-
CORE-12088 REGRESSION of 72867: 3 browsers immediately crash after startup
-
- Resolved
-